# scheme-cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_bench.sh  run_tests.sh
.github/workflows/: ci.yml  pages.yml
bench/: closure_alloc.scm  cons_alloc.scm  env_alloc.scm  fib.scm  gc_pressure.scm  string_concat.scm  symbol_lookup.scm  tail_loop.scm  tail_loop_arith.scm  variadic_apply.scm  vector_alloc.scm
cli/: CMakeLists.txt  main.cpp
cmake/: core.cmake
include/: builtins.hpp  ctx.hpp  driver.hpp  env.hpp  eval.hpp  expr.hpp  lex.hpp  parse.hpp  preamble.hpp  runtime.hpp  scheme.hpp  session.hpp  types.hpp
include/scheme/: session.hpp
src/: arity.cpp  arity.hpp  builtins.cpp  builtins.hpp  ctx.cpp  ctx.hpp  driver.cpp  env.cpp  errors.cpp  errors.hpp  eval.cpp  eval.hpp  expr_nodes.inc  expression.cpp  expression.hpp  lex.cpp  lexer.cpp  lexer.hpp  main.cpp  number.cpp  number.hpp  parse.cpp  parser.cpp  parser.hpp  preamble.cpp  quasiquote.cpp  quasiquote.hpp  quasiquote.inc  read.cpp  reader.cpp  reader.hpp  runtime.cpp  session.cpp  source.cpp  types.cpp  types.hpp
tests/: framework.scm  test_api.cpp  test_arithmetic.scm  test_chars.scm  test_closures.scm  test_errors.scm  test_integration.scm  test_lists.scm  test_macros.scm  test_numbers.scm  test_preamble.scm  test_special_forms.scm  test_streams.scm  test_stress.scm  test_strings.scm  test_tailcalls.scm  test_vectors.scm
web/: CMakeLists.txt  app.js  app.ts  index.html  main.cpp  scheme.d.ts  styles.css  tsconfig.json
